--- a/contatos.html
+++ b/contatos.html
@@ -8,12 +8,12 @@
 </head>
 <body>
     <div class="container">
-        <h1>Almanaque <span class="x">X</span> - Todos os Contatos</h1>
+        <h1>Todos os Contatos</h1><br><br>
 
         <ul id="contact-list">
-        </ul>
+        </ul><br>
 
-        <button onclick="window.location.href='index.html'">Voltar para o Cadastro</button>
+        <button onclick="window.location.href='index.html'" class="animated-button">Voltar para o Cadastro</button>
     </div>
 
     <script src="script.js"></script>
